fix: clean up whitespace and formatting in documentation and styles

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -86,16 +86,16 @@ body {
   --ifm-code-padding-horizontal: 0.1em;
   --ifm-code-padding-vertical: 0em;
   --ifm-pre-background: var(--ifm-code-background);
-  --docusaurus-highlighted-code-line-bg: #282828;  
+  --docusaurus-highlighted-code-line-bg: #282828;
 }
 
 code {
   border: 1px dashed #555;
   letter-spacing: 0.00001px;
-  vertical-align: baseline;  
-  background-color: #EEE;
+  vertical-align: baseline;
+  background-color: #eee;
   border-radius: 0;
-  padding: 2px 6px;  
+  padding: 2px 6px;
 }
 
 input[type="radio"] {
